--- a/index.html
+++ b/index.html
@@ -5,9 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script defer src="script.js"></script>
+    <link rel="stylesheet" href="style.css">
     <title>Bigletto treno</title>
 </head>
 <body>
-    
+    <div class="contenitore">
+        <div id="kilometri"></div>
+        <div id="età"></div>
+        <div id="prezzoIniziale"></div>
+        <div id="prezzoFinale"></div>
+    </div>
 </body>
 </html>
